--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -122,6 +122,7 @@ Deutschland ,/n./@德国;
 development ,/n./@发展;,/n./@开发;
 dilapidated ,/adj./@荒废的;,/adj./@破败的;
 disapproval ,/n./@不批准;,/n./@不同意;
+discernible ,/adj./@可識別的;,/adj./@可辨別的;,/adj./@可分辨的;,/adj./@可察覺的;,/adj./@可認識的;
 discrepancy ,/n./@不符;,/n./@差異;,/n./@不一致;
 disposition ,/n./@性情;,/n./@性格;,/n./@倾向;,/n./@意向;,/n./@兴趣;,/n./@布置;,/n./@部署;
 dissipation ,/n./@损耗;,/n./@浪费;,/n./@消散;
@@ -129,6 +130,7 @@ distinction ,/n./@优秀;,/n./@差别;
 distinctive ,/adj./@与众不同的;
 distinguish ,/v./@区分;
 distraction ,/n./@分心;
+disturbance ,/n./@擾亂;,/n./@打擾;,/n./@騷擾;,/n./@騷亂;
 documentary ,/adj./@文化的;
 duplicitous ,/adj./@奸詐的;
 educational ,/adj./@教育的;
@@ -177,6 +179,7 @@ grasshopper ,/n./@蚱蜢;
 handicapped ,/adj./@有殘疾的;
 haughtiness ,/n./@傲慢;
 headquarter ,/n./@總部;,/n./@司令部;
+holographic ,/adj./@全息攝影的;,/adj./@全息技術的;
 hospitality ,/n./@好客;,/n./@款待;,/n./@殷勤;
 humiliation ,/n./@羞辱;,/n./@蒙羞;
 humiliatory ,/adj./@出丑的;,/adj./@蒙羞的;
@@ -236,6 +239,7 @@ intractable ,/adj./@棘手的;,/adj./@难治的;,/adj./@倔强的;,/adj./@不听
 investigate ,/v./@调查;
 lacquerware ,/n./@漆器;
 linguistics ,/n./@語言學;
+luminescent ,/adj./@發冷光的;,/adj./@冷光的;
 magnificent ,/adj./@极好的;,/adj./@壮丽的;
 maintenance ,/n./@维持;,/n./@抚养费;
 manufactory ,/n./@工厂;
@@ -313,6 +317,7 @@ protagonist ,/n./@主角;,/n./@主人公;,/n./@主要参与者;
 provisional ,/adj./@臨時的;
 provocative ,/adj./@挑衅的;,/adj./@煽动的;,/adj./@挑逗性的;,/adj./@撩人的;,/adj./@引起争议的;,/adj./@启发性的;
 punctuation ,/n./@標點;,/n./@標點符號;
+qualitative ,/adj./@實質性的;,/adj./@質的;,/adj./@定性的;
 radiculitis ,/n./@脊神经根炎;,/n./@神经根炎;
 radioactive ,/adj./@放射性的;
 realization ,/n./@实现;
@@ -334,6 +339,7 @@ respiration ,/n./@呼吸;,/n./@呼吸作用;
 responsible ,/adj./@有责任的;
 restoration ,/n./@恢復;,/n./@復位;,/n./@復辟;
 restriction ,/n./@限制;
+retaliation ,/n./@報復;
 retribution ,/n./@报应;
 retroactive ,/adj./@追溯性的;
 rudimentary ,/adj./@基本的;,/adj./@初步的;
@@ -387,6 +393,7 @@ transaction ,/n./@交易;,/n./@事務;,/n./@辦理;,/n./@學報;
 transfusion ,/n./@輸血;,/n./@輸液;,/n./@灌輸;,/n./@傾注;
 translation ,/n./@翻译;,/n./@译文;
 translucent ,/adj./@透明的;,/adj./@半透明的;
+transmedium ,/adj./@转介的;,/adj./@跨媒介的;
 transparent ,/adj./@透明的;
 transponder ,/n./@收發機;
 treacherous ,/adj./@奸诈的;,/adj./@叛逆的;,/adj./@危险的;
@@ -404,5 +411,6 @@ unnecessary ,/adj./@不必要的;
 unrelenting ,/adj./@持续的;,/adj./@未减弱的;,/adj./@不鬆懈的;,/adj./@不屈服的;,/adj./@不屈不撓的;
 unwittingly ,/adv./@不知不覺的;
 venturesome ,/adj./@冒險的;,/adj./@有風險的;,/adj./@危險的;
+vibrational ,/adj./@顫動的;,/adj./@振動的;,/adj./@震動的;
 whereabouts ,/n./@下落;,/n./@去向;,/n./@所在;,/n./@行蹤;,/adv./@在何處;
 willingness ,/n./@樂意;,/n./@自愿;
