--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -39,6 +39,7 @@ circumstance ,/n./@环境;,/n./@情况;,/n./@境遇;,/n./@事件;
 civilization ,/n./@文明;
 cohabitation ,/n./@同居;
 colonization ,/n./@殖民;,/n./@定植;,/n./@定殖;
+commensurate ,/adj./@相稱的;,/adj./@同量的;
 commonwealth ,/n./@共和国;
 compensation ,/n./@補償;,/n./@彌補;,/n./@賠償;,/n./@賠償金;,/n./@補償金;,/n./@報酬;
 complication ,/n./@复杂;,/n./@复杂化;
@@ -72,6 +73,7 @@ deliberately ,/adv./@故意的;,/adv./@慎重地;
 deliberation ,/n./@慎重;,/n./@故意;
 demographics ,/n./@人口统计资料;
 denomination ,/n./@名称;,/n./@教派;,/n./@面额;
+destigmatize ,/vt./@去污名化;
 disadvantage ,/n./@不利;
 disagreement ,/n./@争执;,/n./@不符;
 disconsolate ,/adj./@憂鬱的;,/adj./@鬱鬱不樂的;
@@ -152,6 +154,7 @@ occupational ,/adj./@职业的;
 organisation ,/n./@组织;
 organization ,/n./@组织;
 ostentatious ,/adj./@招搖的;,/adj./@誇耀的;
+outmanoeuvre ,/vt./@智勝;
 overestimate ,/v./@高估;
 overwhelming ,/adj./@壓倒性的;
 paramilitary ,/adj./@准军事的;
