--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -64,7 +64,7 @@ indispensable ,/adj./@必不可少的;
 industrialize ,/v./@工业化;
 insensitivity ,/n./@冷漠;
 inspirational ,/adj./@鼓舞人心的;,/adj./@激发灵感的;
-instantaneous ,/adj./@瞬间的;
+instantaneous ,/adj./@瞬间的;,/adj./@即時的;,/adj./@瞬時的;
 international ,/adj./@国际的;
 interpolation ,/n./@插入;,/n./@篡改;,/n./@填寫;
 interrogation ,/n./@讯问;,/n./@审问;
