--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -1,5 +1,6 @@
 administration ,/n./@管理;,/n./@行政;
 archaeological ,/adj./@考古学的;
+astrophysicist ,/n./@天體物理學家;
 authentication ,/n./@證明;,/n./@鑑定;,/n./@證實;
 characteristic ,/n./@特徵;,/n./@特性;
 circumvolution ,/n./@盤繞;,/n./@旋轉;
