--- a/Files/lang/ch/chinese15.csv
+++ b/Files/lang/ch/chinese15.csv
@@ -3,6 +3,7 @@ confidentiality ,/n./@機密;,/n./@機密性;
 democratization ,/n./@民主化;
 dichotomization ,/n./@二分;
 distinguishable ,/adj./@可辨别的;
+electromagnetic ,/adj./@電磁的;,/adj./@電磁體的;
 experimentation ,/n./@试验;
 hypoproteinemia ,/n./@低蛋白血症;
 notwithstanding ,/adv./@尽管如此;,/adv./@即使这样;
