--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -6,6 +6,7 @@ acme ,/n./@頂點;,/n./@極點;
 acre ,/n./@英畝;
 aeon ,/n./@永世;,/n./@萬古;,/n./@極長時期;,/n./@十億年;
 agog ,/adj./@極度興奮的;
+akin ,/adj./@同類的;,/adj./@類似的;,/adj./@同族的;
 alas ,/int./@唉;,/int./@唉呀;
 ally ,/n./@盟友;,/n./@夥伴;
 also ,/adv./@也;
@@ -28,8 +29,9 @@ aura ,/n./@光環;,/n./@氛圍;
 auto ,/abbr./@自動的;
 aver ,/v./@聲明;
 avid ,/adj./@渴望的;
+avow ,/vt./@公開承認;
 away ,/adv./@離開@的;,/adj./@不在的;,/adj./@距離遠的;
-awry ,/adj./@歪的;
+awry ,/adj./@歪的;,/adj./@错的;
 axis ,/n./@軸;,/n./@轴线;,/n./@轴心;
 baby ,/n./@寳貝;,/n./@嬰兒;
 back ,/adv./@回;,/n./@后面;,/n./@背部;,/adv./@向后地;,/v./@支持;
@@ -320,7 +322,7 @@ flip ,/v./@彈;,/v./@擲;
 flog ,/vt./@鞭打;,/vt./@鞭策;
 flop ,/v./@拋下;,/n./@失敗;
 flow ,/v./@流;
-flux ,/n./@流動;,/n./@變遷;
+flux ,/n./@流動;,/n./@變遷;,/n./@通量;
 foam ,/n./@泡沫;,/v./@起泡;
 foil ,/n./@箔片;,/v./@襯托;,/v./@阻止;,/v./@擋開;
 fold ,/v./@合;,/v./@折叠;
@@ -499,7 +501,7 @@ kiss ,/v./@吻;,/n./@吻;
 klan ,/n./@三K黨;
 knee ,/n./@膝;
 knew ,/vt./<know>@知道;
-knot ,/n./@結;,/n./@扣;
+knot ,/n./@結;,/n./@扣;,/n./@節;
 know ,/v./@知道;
 lack ,/n.v./@缺少;
 lady ,/n./@女士;
@@ -779,7 +781,7 @@ quid ,/n./@咀嚼物;,/n./@英鎊;
 quit ,/v./@離開;
 quiz ,/n./@測試;
 race ,/n./@種族;,/n./@競賽;
-raft ,/n./@筏;
+raft ,/n./@筏;,/n./@浮艇;,/n./@浮臺;
 rage ,/v./@发怒;,/n./@激烈;,/n./@盛怒;
 raid ,/n.//v./@劫掠;,/v./@袭击;
 rail ,/n./@鐵軌;,/n./@栏杆;,/n./@横杆;,/n./@扶手;
@@ -827,12 +829,13 @@ rose ,/v./@升起;
 rote ,/v./@死記硬背;
 rout ,/v./@潰敗;,/v./@擊潰;
 rsvp ,/abbr./@請囘復;
+ruby ,/n./@紅寶石;,/n./@红宝石色;,/adj./@紅寶石色的;
 rude ,/adj./@粗魯的;,/adj./@野蠻的;,/adj./@下流的;
 ruin ,/v./@毀滅;,/n./@廢墟;
 rule ,/v./@統治;
 runt ,/n./@小家畜;
 rush ,/v./@衝;,/n./@匆促;
-rust ,/v./(使)@生鏽;,/n./@鐵鏽;
+rust ,/v./(使)@生鏽;,/n./@鐵鏽;,/vt./@荒廢;
 sack ,/v./@洗劫;,/n./@麻袋;,/v./@解僱;
 safe ,/adj./@安全的;
 saga ,/n./@傳說;
@@ -895,6 +898,7 @@ slap ,/v./@摑;,/v./@拍擊;
 slat ,/n./@板條;,/n./@條板;
 slay ,/v./@殺害;
 sled ,/n./@雪橇;
+slew ,/n./@許多;,/vt./@旋轉;
 slim ,/adj./@苗條的;,/adj./@瘦的;
 slip ,/v./@滑動;
 slit ,/v./@割裂;,/v./@撕裂;
@@ -1075,6 +1079,7 @@ ward ,/n./@病房;,/v./@保衛;,/v./@避開;
 ware ,/n./@陶器;
 warm ,/adj./@溫暖的;
 warn ,/v./@警告;
+warp ,/vt./@扭曲;,/vt./@彎曲;,/n./@变形;,/n./@扭曲;
 wary ,/adj./@警惕的;,/adj./@謹慎的;
 wash ,/v./@洗;
 wave ,/n./@波浪;,/n./@波動;
