--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -262,6 +262,7 @@ coast ,/n./@海岸;
 cocky ,/adj./@自大的;
 colon ,/n./@冒號;,/n./@結腸;,/n./@科隆;
 color ,/redirected./@target="colour";
+comet ,/n./@彗星;
 comfy ,/adj./@舒服的;
 comic ,/adj./@滑稽的;
 comma ,/n./@逗號;,/n./@停頓;
@@ -391,6 +392,7 @@ embed ,/v./@嵌入;,/v./@插入;,/v./@栽种;
 ember ,/n./@餘火;,/n./@餘燼;
 emend ,/vt./@校訂;
 empty ,/adj./@空的;,/adj./@空白的;
+endow ,/vt./@捐贈;,/vt./@賦予;,/vt./@資助;
 enemy ,/n./@敵人;
 enjoy ,/v./@享受;,/v./@(使)愉快;
 enrol ,/v./@登記;
@@ -407,7 +409,7 @@ error ,/n./@錯誤;
 essay ,/n./@散文;,/n./@論文;,/n./@小品文;
 ether ,/n./@乙醚;,/n./@以太;
 ethic ,/adj./@道德的;
-evade ,/v./@逃脫;
+evade ,/v./@逃脫;,/vt./@躲避;,/vt./@逃避;,/vt./@迴避;
 event ,/n./@事件;
 every ,/adj./@每@一;
 evict ,/vt./@驅逐;,/vt./@逐出;
@@ -461,7 +463,7 @@ float ,/v./@漂浮;
 flock ,/n./@羣;,/n./@衆多;,/n./@一羣;
 flood ,/n./@洪水;
 floor ,/n./@樓層;,/n./@地板;
-fluid ,/n./@液体;,/adj./@流动的;,/adj./@流畅的;
+fluid ,/n./@液体;,/adj./@流动的;,/adj./@流畅的;,/n./@流體;
 fluky ,/adj./@僥幸的;,/adj./@幸中的;,/adj./@不可靠的;
 flunk ,/n./@失敗;,/n./@放棄;,/n./@不及格;
 flush ,/v./@激動;,/v./@发紅;,/adj./@洋溢的;,/v./@旺盛;,/v./@奔流;
@@ -742,6 +744,7 @@ moved ,/adj./@感動的;,/adj./@被移動的;
 movie ,/n./@電影;
 mulch ,/n./@護根;,/n./@護蓋物;
 mural ,/n./@壁画;
+murky ,/adj./@黑暗的;,/adj./@昏暗的;,/adj./@陰鬱的;,/adj./@浑浊的;,/adj./@不可告人的;
 music ,/n./@音樂;
 musty ,/adj./@發霉的;,/adj./@落伍的;,/adj./@冷淡的;
 mutex ,/n./@互斥;,/n./@互斥體;
@@ -938,6 +941,7 @@ robot ,/n./@機器人;
 rogue ,/n./@流氓;
 Rolex ,/n./@勞力士;
 Roman ,/n./@羅馬人;
+rotor ,/n./@轉子;,/n./@轉片;
 rough ,/adj./@粗糙的;
 round ,/v./@圓的;,/prep./@附近;
 route ,/n./@路徑;,/n./@路綫;
@@ -971,6 +975,7 @@ scope ,/n./@範圍;,/n./@余地;,/n./@機會;
 score ,/n./@得分;,/n./@成績;,/v./@得分;
 scorn ,/v./@蔑視;,/v./@嘲諷;
 scour ,/v./@沖刷;,/v./@擦;
+scout ,/vt./@偵察;,/vt./@搜索;,/n./@斥候;,/n./@偵察員;,/n./@偵察兵;,/n./@偵察;
 scowl ,/v./@愁容;
 scram ,/vi./@走開;,/vi./@滚开;
 scrap ,/n./@碎片;,/n./@廢棄物;,/n./@片段;
@@ -1151,7 +1156,7 @@ sully ,/v./@玷污;,/n./@污點;,/n./@損傷;
 super ,/adj./@超級的;
 surge ,/n./@大浪;,/n./@洶湧澎湃;,/v./@激增;
 sushi ,/n./@壽司;
-swarm ,/v./@擠滿;,/n./@羣;
+swarm ,/v./@擠滿;,/n./@羣;,/n./@大群;
 swear ,/v./@发誓;,/v./@咒罵;
 sweat ,/n./@汗;,/v./@出汗;
 sweep ,/v./@掃;,/v./@席捲;
