--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -75,6 +75,7 @@ arcane ,/adj./@神秘的;
 archer ,/n./@弓箭手;
 ardent ,/adj./@熱情的;,/adj./@熱心的;,/adj./@激烈的;,/adj./@熱烈的;
 aren't ,/v./@不是;
+armada ,/n./@艦隊;,/n./@機群;
 armour ,/n./@盔甲;
 around ,/v./@周圍;
 arouse ,/v./@喚醒;,/v./@喚起;,/v./@激發;,/v./@引起;,/v./@鼓勵;
@@ -189,6 +190,7 @@ bridle ,/n./@韁繩;,/v./@約束;,/v./@抑制;,/v./@控制;
 bright ,/adj./@明亮的;,/adj./@聰明的;
 broach ,/v./@鑽孔;,/vt./@引入;,/vt./@启用;
 broken ,/adj./@破碎的;,/adj./@燬壞的;
+bronze ,/n./@青銅;,/adj./@青銅製的;,/adj./@青銅色的;,/adj./@古銅色的;
 brooch ,/n./@胸針;,/n./@領針;
 browse ,/v./@瀏覽;
 bruise ,/n./@擦傷;,/n./@瘀傷;,/n./@青腫;,/n./@挫傷;
@@ -309,7 +311,7 @@ convoy ,/v./@護航;,/v./@護送;,/v./@護衛;
 cooker ,/n./@廚具;
 cookie ,/n./@曲奇;,/n./@餅干;
 coolie ,/n./@苦力;
-copper ,/n./@銅;
+copper ,/n./@銅;,/vt./@鍍銅於;
 cordon ,/n./@警戒綫;,/n./@綬帶;,/n./@哨兵線;,/n./@封鎖線;
 corner ,/n./@角落;
 corpse ,/n./@屍體;
@@ -324,7 +326,7 @@ course ,/n./@課程;
 cousin ,/n./@堂兄弟姐妹;,/n./@表兄弟姐妹;
 covert ,/n./@隱藏處;,/adj./@隱蔽的;,/adj./@隱秘的;
 coward ,/n./@懦夫;
-cradle ,/n./@搖籃;,/n./@发源地;
+cradle ,/n./@搖籃;,/n./@发源地;,/n./@托架;,/n./@支架;
 cranky ,/adj./@暴躁的;,/adj./@古怪的;
 crappy ,/adj./@蹩脚的;,/adj./@糟糕的;
 crater ,/n./@坑;,/n./@彈坑;,/n./@火山口;,/n./@隕石坑;
@@ -864,6 +866,7 @@ morbid ,/adj./@病態的;,/adj./@消極的;,/adj./@恐怖的;
 morgue ,/n./@陳屍所;,/n./@停尸房;,/n./@太平间;,/n./@資料室;
 morose ,/adj./@鬱悶的;,/adj./@孤僻的;,/adj./@陰鬱的;,/adj./@陰沉的;
 mortal ,/adj./@凡人的;,/adj./@會死的;
+mortar ,/n./@迫擊砲;,/n./@研缽;
 mosque ,/n./@清真寺;
 mother ,/n./@母親;
 motion ,/n./@運動;
@@ -892,6 +895,7 @@ nature ,/n./@自然;
 nausea ,/n./@噁心;,/n./@暈船;,/n./@厭惡;
 nearby ,/adj./@附近的;
 needle ,/n./@針;
+negate ,/vt./@否定;,/vt./@取消;
 nephew ,/n./@侄子;,/n./@外甥;
 nestle ,/v./@安頓;,/v./@建巢;
 neural ,/adj./@神經的;
@@ -913,6 +917,7 @@ nudity ,/n./@裸體;,/n./@裸露;
 number ,/n./@數字;,/n./@號碼;,/n./@若干;
 object ,/n./@目標;,/v./@反對;
 oblige ,/v./@迫使;,/v./@施恩@惠;
+oblong ,/adj./@橢圓形的;,/adj./@矩形的;
 obsess ,/v./@迷住;,/v./@迷戀;,/v./@著迷;
 obtain ,/v./@獲得;,/v./@習得;
 obtuse ,/adj./@遲鈍的;,/adj./@圓頭的;,/adj./@不鋒利的;
@@ -980,6 +985,7 @@ period ,/n./@一段時間;,/n./@學識;,/n./@記號;
 perish ,/v./@死亡;,/v./@毀滅;
 permit ,/v./@允許;
 person ,/n./@人;
+pestle ,/n./@杵;,/vt./@搗;,/vt./@研碎;,/n./@碾槌;
 petrol ,/n./@汽油;
 phrase ,/n./@短語;
 phylum ,/n./@門;,/n./@語係;
@@ -996,7 +1002,7 @@ pirate ,/n./@海盜;
 pistol ,/n./@手槍;
 plague ,/n./@瘟疫;,/v./@折磨;
 planet ,/n./@星球;,/n./@行星;
-plasma ,/n./@血漿;,/n./@等离子体;
+plasma ,/n./@血漿;,/n./@等离子体;,/n./@電漿;
 please ,/v./@請;
 pledge ,/v./@保證;,/v./@发誓;
 plenty ,/adj./@大量的;
@@ -1057,6 +1063,7 @@ racket ,/n./@喧鬧;
 radial ,/adj./@放射的;,/adj./@輻射的;
 radius ,/n./@半徑;
 raffle ,/v./@抽彩售貨;
+rafter ,/n./@椽;,/n./@椽子;
 raisin ,/n./@葡萄乾;
 ramble ,/v./@漫步;,/n./@漫步;
 random ,/adj./@隨機的;,/adj./@任意的;
@@ -1430,6 +1437,7 @@ trauma ,/n./@外傷;,/n./@創傷;,/n./@傷口;
 travel ,/n./@旅行;
 treaty ,/n./@條約;
 tremor ,/n./@震動;
+trench ,/n./@溝渠;,/n./@戰壕;,/n./@塹壕;
 trendy ,/adj./@時髦的;
 treson ,/n./@叛國罪;,/n./@背叛;
 triage ,/n./@分類;,/v./@分類;,/v./@應急分配;
@@ -1472,6 +1480,7 @@ update ,/v./@更新;,/n./@更新;,/n./@新資訊;
 uphold ,/v./@維護;,/v./@支撑;,/v./@贊成;
 uppity ,/adj./@傲慢的;,/adj./@自負的;,/adj./@自大的;
 upward ,/adv./@向上;,/adj./@向上的;
+Uranus ,/n./@天王星;
 urbane ,/adj./@文雅的;,/adj./@有禮貌的;,/adj./@都市化的;
 urgent ,/adj./@緊迫的;,/adj./@緊急的;
 ursine ,/adj./@熊的;,/adj./@像熊的;
