--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -114,6 +114,7 @@ baptise ,/v./@施洗;,/v./@洗禮;,/v./@洗滌;
 baptize ,/v./@施洗;,/v./@命名;
 bargain ,/v./@討價還價;
 barrack ,/n./@兵營;,/n./@營房;,/v./@駐兵;,/v./@住入;,/vt./@起哄;,/vt./@喝倒彩;
+barrage ,/n./@彈幕;,/n./@火力網;
 barrier ,/n./@障礙;,/n./@壁壘;
 bastard ,/n./@私生子;
 bathtub ,/n./@浴缸;,/n./@澡盆;
@@ -217,6 +218,7 @@ chapter ,/n./@章節;
 chariot ,/n./@双轮战车;
 charity ,/n./@慈善;,/n./@施捨;,/n./@仁慈;
 charter ,/n./@憲章;,/n./@特許證;
+chassis ,/n./@底盤;,/n./@底座;,/n./@底架;,/n./@砲座;,/n./@起落架;
 cherish ,/v./@珍視;
 chicken ,/n./@小鷄;
 chimney ,/n./@煙囪;
@@ -238,6 +240,7 @@ clobber ,/v./@擊倒;,/v./@痛打;
 closure ,/n./@停止;
 cluster ,/n./@群;,/n./@簇;,/n./@叢;,/n./@串;
 clutter ,/n./@雜亂;
+cockpit ,/n./@座艙;,/n./@駕駛艙;,/n./@駕駛座;,/n./@鬥雞場;,/n./@戰場;
 collage ,/n./@拼貼畫;
 collate ,/v./@整理;,/v./@核對;,/v./@校對;
 collect ,/v./@收集;
@@ -361,6 +364,7 @@ defense ,/n./@答辯;
 defiant ,/adj./@挑釁的;
 deficit ,/n./@赤字;
 deflate ,/v./@收縮;,/v./@緊縮;
+deflect ,/vt./使@偏斜;,/vt./使@轉向;
 delight ,/adj./@髙興的;,/adj./@愉快的;
 deliver ,/v./@交付;,/v./@傳送;,/v./@遞送;,/v./@接生;
 density ,/n./@密度;
@@ -447,7 +451,7 @@ elation ,/n./@興髙采烈;
 element ,/n./@元素;,/n./@要素;
 elevate ,/v./@提升;,/v./@提髙;
 elusion ,/n./@逃避;,/n./@回避;
-elusive ,/adj./@躲閃的;,/adj./@逃避的;,/adj./@躲避的;
+elusive ,/adj./@躲閃的;,/adj./@逃避的;,/adj./@躲避的;,/adj./@難以理解的;,/adj./@難以捉摸的;
 emanate ,/v./@放射;
 embassy ,/n./@使館;
 embrace ,/v./@擁抱;,/v./@包含;
@@ -474,6 +478,7 @@ episode ,/n./@集;,/n./@插曲;,/n./@情節;
 epitaph ,/n./@墓志銘;
 erasure ,/n./@消除;,/n./@擦除;,/n./@清除;
 erosion ,/n./@腐蝕;
+erratic ,/adj./@不穩定的;,/adj./@無規律的;,/adj./@飄忽不定的;,/adj./@难以预测的;,/adj./@難以捉摸的;
 espouse ,/v./@支持;,/v./@嫁;,/v./@娶;,/v./@贊成;,/v./@信奉;
 esquire ,/n./@君子;
 eternal ,/adj./@永恆的;
@@ -550,6 +555,7 @@ forward ,/adv./@向前;
 founder ,/n./@創辦人;,/n./@奠基人;,/vi./@沉沒;,/vi./@失敗;
 fragile ,/adj./@易碎的;,/adj./@脆的;
 frailty ,/n./@虛弱;
+frantic ,/adj./@發狂似的;,/adj./@狂亂的;,/adj./@狂暴的;
 freedom ,/n./@自由;
 freight ,/n./@貨運;,/n./@貨物;,/n./@運費;,/vt./@以货运运输;
 friable ,/adj./@易碎的;
@@ -654,6 +660,7 @@ incisor ,/n./@門牙;,/n./@前齒;
 incline ,/v./@贊同;,/v./@傾斜;
 include ,/v./@包括;
 indulge ,/v./@縱容;,/v./@放任;
+inertia ,/n./@慣性;,/n./@惰性;,/n./@不活動;
 inferno ,/n./@地獄;,/n./@陰間;
 inflict ,/v./@打擊;,/v./@損傷;
 ingress ,/n./@进入;,/n./@入口;,/n./@入境;
@@ -906,7 +913,7 @@ perturb ,/vt./@煩擾;
 pervade ,/vt./@彌漫於;
 pervert ,/v./@濫用;,/n./@變態;,/v./@腐蝕;,/v./@歪曲;
 petrify ,/vt./@吓呆;,/vt./@石化;,/vi./@石化;
-phantom ,/n./@幽靈;,/n./@幻影;
+phantom ,/n./@幽靈;,/n./@幻影;,/n./@幻覺;,/n./@幻像;
 pharaoh ,/n./@法老;
 phoenix ,/n./@鳳凰;
 physics ,/n./@物理學;
@@ -1295,7 +1302,7 @@ trouble ,/n./@麻煩;
 trumpet ,/n./@喇叭;
 Tuesday ,/n./@星期二;
 tuition ,/n./@學費;
-turbine ,/n./@渦輪機;
+turbine ,/n./@渦輪機;,/n./@渦輪;
 turmoil ,/n./@混乱;,/n./@骚乱;,/n./@动乱;,/#syn/@tumult;
 twinkle ,/v./@閃耀;,/v./@眨眼;
 twitter ,/n./@推特;
@@ -1311,6 +1318,7 @@ unlucky ,/adj./@不幸的;
 unravel ,/vt./@解開;,/vt./@澄清;
 upfront ,/adj./@預付的;,/adj./@在前面的;,/adj./@正直的;,/adj./@坦率的;,/adj./@显要的;
 upright ,/adj./@正直的;
+uranium ,/n./@鈾;
 urgency ,/n./@緊急;,/n./@緊急事件;
 urinate ,/vi./@撒尿;,/vi./@排尿;,/vi./@小便;
 useless ,/adj./@無用的;
@@ -1363,6 +1371,7 @@ warlock ,/n./@術士;,/n./@巫師;,/n./@魔術師;
 warning ,/n./@警告;
 warrant ,/v.//n./@許可;,/v.//n./@保證;,/v.//n./@擔保;,/n./@根據;,/n./@證明;
 warrior ,/n./@戰士;
+warship ,/n./@軍艦;,/n./@戰艦;
 waybill ,/n./@乘客名單;,/n./@運貨單;
 weather ,/n./@天氣;
 webpage ,/n./@網頁;
@@ -1381,6 +1390,7 @@ wiretap ,/v./@竊聽;,/n./@竊聽;
 without ,/prep./@沒有;
 witness ,/v./@目覩;
 woollen ,/adj./@羊毛的;,/adj./@毛織的;
+worldly ,/adj./@世間的;,/adj./@塵世的;,/adj./@世故的;,/adj./@世俗的;
 worship ,/v./@崇拜;
 wrestle ,/n./@摔跤;
 wringer ,/n./@絞擰機;
