--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -85,7 +85,8 @@ arborist ,/n./@园艺设计师;
 archaism ,/n./@古語;
 arguable ,/adj./@有争议的;
 argument ,/n./@论证;,/n./@论点;
-armament ,/n./@武器;,/n./@軍備;
+armament ,/n./@武器;,/n./@軍備;,/n./@戰備;
+armchair ,/n./@扶手椅;,/adj./@無實際經驗的;,/adj./@脫離實際的;,/adj./@不切實際的;
 aromatic ,/adj./@芳香的;,/n./@香料;
 arrogant ,/adj./@傲慢的;,/adj./@自大的;
 arrogate ,/v./@冒称;,/v./@霸占;
@@ -203,7 +204,7 @@ coincide ,/v./@一致;,/n./@巧合;,/n./@同時發生;
 collapse ,/v./@坍塌;
 colonial ,/adj./@殖民的;,/adj./@殖民地的;
 colorful ,/adj./@多彩的;
-colossal ,/adj./@庞大的;
+colossal ,/adj./@庞大的;,/adj./@巨大的;
 Columbia ,/n./@哥伦比亚;
 commence ,/n./@开始;
 commerce ,/n./@商业;
@@ -237,6 +238,7 @@ contempt ,/n./@蔑视;,/n./@藐视;
 contents ,/n./@目录;
 continue ,/v./@继续;
 contract ,/n./@合同;,/n./@契约;
+contrail ,/n./@凝結尾;
 contrary ,/n./@相反的;,/n./@相反;
 contrast ,/n./@对比;
 contrite ,/adj./@後悔的;
@@ -381,6 +383,7 @@ electric ,/adj./@电的;
 elegance ,/n./@优雅;
 elevator ,/n./@电梯;
 eligible ,/adj./@合格的;,/n./@合格者;
+elongate ,/vt./@拉長;,/vt./@伸長;,/vt./@延長;
 eloquent ,/adj./@表達清晰的;,/adj./@雄辯的;
 emblazon ,/v./@頌揚;,/v./@用紋章裝飾;
 embolden ,/v./使@有膽量;
@@ -516,6 +519,7 @@ gruesome ,/adj./@恐怖的;,/adj./@令人厌恶的;
 guardian ,/n./@保護人;,/n./@監護人;,/adj./@守護的;
 guidance ,/v./@指导;
 gymnasia ,/n./@體育館;,/n./@健身房;
+gyration ,/n./@旋轉;,/n./@螺旋;,/n./@迴旋;
 handcuff ,/n./@手銬;
 handicap ,/v./@妨礙;,/n./@障礙;
 handsome ,/adj./@帅气的;
@@ -577,6 +581,7 @@ indebted ,/adj./@感激的;,/adj./@感恩的;
 indicate ,/v./@表明;,/v./@指示;
 indirect ,/n./@间接的;
 industry ,/n./@工业;
+inertial ,/adj./@慣性的;
 infamous ,/adj./@醜惡的;,/adj./@臭名昭著的;,/adj./@聲名狼藉的;
 infantry ,/n./@步兵;,/n./@步兵團;
 inferior ,/adj./@下级的;,/adj./@下等的;,/adj./@較差的;,/adj./@低等的;
@@ -974,6 +979,7 @@ semester ,/n./@學期;
 sensible ,/adj./@明智的;
 sensuous ,/adj./@感官的;
 sentence ,/n./@句子;,/v./@判刑;
+sentient ,/adj./@有知覺的;,/adj./@有感覺能力的;,/adj./@有意識的;,/adj./@有感情的;
 separate ,/v./使@分离;,/v./@分开;,/v./@分隔;
 seperate ,/v./@分散;
 septuple ,/adj./@七倍的;
@@ -1018,6 +1024,7 @@ splendor ,/n./@光彩;,/n./@壯麗;,/n./@壯觀;,/n./@光輝;,/n./@輝煌;
 sporadic ,/adj./@零星的;,/adj./@分散的;,/adj./@偶發的;,/adj./@散發的;
 sprinkle ,/vt./@洒;,/vt./@撒;,/n./@少量;
 spurious ,/adj./@假的;
+squadron ,/n./@中隊;,/n./@分遣隊;,/n./@分隊;
 squander ,/v./@浪費;,/vt./@挥霍;
 stallion ,/n./@種馬;,/n./@成年公馬;
 stampede ,/n./@驚跑;,/v./@驚逃;
@@ -1042,6 +1049,7 @@ stuffing ,/n./@填料;
 stunning ,/adj./@极好的;,/adj./@令人震惊的;
 submerge ,/vt./@淹沒;,/vt./@湮沒;,/vt./@掩蓋;,/vt./@覆蓋;
 subpoena ,/n./@传票;,/v./@传讯;,/v./@传唤;
+subsonic ,/adj./@亞音速的;,/adj./@次音速的;
 subtitle ,/n./@副標題;,/n./@字幕;
 subtlety ,/n./@微妙;
 subtract ,/vt./@减;
