--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -235,6 +235,7 @@ cultivate ,/v./@培养;
 curiosity ,/n./@好奇心;,/n./@好奇;
 currently ,/adv./@目前;
 curricula ,/n./@課程;
+curvature ,/n./@彎曲;,/n./@曲率;,/n./@弯曲度;
 customary ,/adj./@習慣的;,/adj./@通常的;,/adj./@慣常的;,/adj./@合乎習俗的;
 customise ,/v./@定制;,/v./@个性化;
 customize ,/v./@定制;
@@ -405,6 +406,7 @@ fabricate ,/v./@製作;,/v./@捏造;
 fanciness ,/n./@空想;,/n./@花哨;
 fantastic ,/adj./@奇异的;,/adj./@幻想的;,/adj./@极好的;
 fascinate ,/v./@吸引;
+ferocious ,/adj./@兇猛的;,/adj./@猛烈的;,/adj./@殘忍的;
 feudalism ,/n./@封建主義;
 financial ,/adj./@经济的;
 firstname ,/n./@名;
@@ -446,6 +448,7 @@ guarantee ,/v./@保证;
 guideline ,/n./@指導方針;
 gymnasium ,/n./@體育館;,/n./@健身房;,/n./@體操學校;
 gymnastic ,/adj./@體操的;,/adj./@體育的;
+gyroscope ,/n./@迴轉儀;,/n./@陀螺儀;
 halloween ,/n./@諸聖日;
 hamburger ,/n./@汉堡包;
 handiwork ,/n./@手工藝;,/n./@手工製品;,/n./@所作所为;,/n./@行為後果;
@@ -500,6 +503,7 @@ increment ,/n./@增值;
 incubator ,/n./@孵育器;
 inculcate ,/v./@灌输;,/v./@塑造;
 incumbent ,/adj./@現任的;,/n./@在職者;
+incursion ,/n./@入侵;,/n./@侵入;,/n./@侵略;,/n./@侵占;
 indelible ,/adj./@不可磨滅的;,/adj./@不可消除的;,/adj./@難忘的;
 indemnity ,/n./@保險補償;,/n./@保障;,/n./@保險;,/n./@補償;,/n./@賠償;,/n./@免罰;,/n./@免罪;,/n./@賠款;
 indignant ,/adj./@愤慨的;
@@ -511,6 +515,7 @@ informant ,/n./@提供消息的人;,/n./@资料提供者;
 infuriate ,/v./@激怒;
 ingenious ,/adj./@巧妙的;,/adj./@灵巧的;
 ingenuity ,/n./@精巧;,/n./@獨創性;,/n./@心靈手巧;
+ingrained ,/adj./@根深蒂固的;,/adj./@深入人心的;
 insertion ,/n./@插入;
 instigate ,/v./@唆使;,/v./@煽动;,/v./@怂恿;,/vt./@提起;,/vt./@发起;
 institute ,/n./@学会;,/n./@协会;,/v./@制定;,/v./@創立;
@@ -551,6 +556,7 @@ judicious ,/adj./@明智的;
 katabatic ,/adj./@下降的;,/adj./@下吹的;
 kinematic ,/adj./@运动学的;
 knowledge ,/n./@知识;
+laborious ,/adj./@費力的;,/adj./@艰巨的;,/adj./@吃力的;
 labyrinth ,/n./@迷宫;
 landscape ,/n./@风景;,/n./@风景画;,/n./@地形;
 lawnmower ,/n./@割草機;
@@ -580,6 +586,7 @@ margarine ,/n./@人造黃油;,/n./@人造奶油;
 marijuana ,/n./@大麻;
 marvelous ,/adj./@了不起的;,/adj./@非凡的;,/adj./@令人惊异的;,/adj./@不平常的;
 masculine ,/adj./@男性的;,/adj./@陽性的;,/adj./@男子氣概的;,/n./@男性;,/n./@陽性;
+maternity ,/n./@母性;,/n./@母亲身份;,/n./@母愛;,/n./@產科病房;,/adj./@產婦的;,/adj./@產科的;
 matriarch ,/n./@女统治者;,/n./@女家长;
 matricide ,/n./@弑母;
 matrimony ,/n./@結婚;,/n./@婚禮;,/n./@婚姻;
@@ -589,7 +596,7 @@ mechanics ,/n./@力学;,/n./@机械学;
 mechanism ,/n./@机制;
 melodrama ,/n./@情節劇;,/n./@戏剧性事件;,/n./@傳奇劇;
 menstrual ,/adj./@月经的;
-mesmerize ,/v./@吸引;
+mesmerize ,/v./@吸引;,/vt./@迷惑;,/vt./@迷住;,/vt./@催眠;
 messianic ,/adj./@彌賽亞的;,/adj./@救世主的;,/adj./@信奉救世主的;
 metabolic ,/adj./@变化的;,/adj./@新陈代谢的;
 meteorite ,/n./@隕石;
@@ -597,6 +604,7 @@ methodism ,/n./@衛理宗教義;,/n./@循道宗教義;
 methodist ,/n./@衛理公會教徒;,/n./@循道宗教徒;
 metrology ,/n./@度量衡學;,/n./@計量學;
 microwave ,/n./@微波;
+migratory ,/adj./@遷徙的;,/adj./@遷移的;,/adj./@遷居的;,/adj./@洄游的;,/adj./@遊走性的;
 millipede ,/n./@千足虫;,/n./@马陆;
 miniature ,/n./@微缩模型;,/adj./@小型的;
 miserable ,/adj./@痛苦的;
@@ -705,6 +713,7 @@ porcelain ,/n./@瓷;,/n./@瓷器;
 portfolio ,/n./@公文包;,/n./@文件夹;
 posterior ,/adj./@後面的;
 posterity ,/n./@後代;,/n./@後世;,/n./@後裔;
+postulate ,/vt./@假定;,/vt./@假設;,/n./@假設;,/n./@假定;
 potential ,/n./@潜力;
 practical ,/adj./@實際的;
 pragmatic ,/adj./@實際的;,/adj./@實用主義的;,/adj./@務實的;,/adj./@實幹的;
@@ -840,6 +849,7 @@ severance ,/n./@解雇;,/n./@割断;,/n./@切断;,/n./@断绝;
 sexuality ,/n./@性慾;
 shamanism ,/n./@黃教;,/n./@萨满教;
 sharpener ,/n./@削筆刀;,/n./@磨刀石;
+shootdown ,/n./@击落;
 shouldn't ,/v./@不能;
 signature ,/n./@署名;
 similarly ,/adj./@相似的;
@@ -949,7 +959,7 @@ vegetable ,/n./@蔬菜;,/n./@植物;,/adj./@蔬菜的;,/adj./@植物的;
 vehemence ,/n./@熱情;
 vengeance ,/n./@报复;,/n./@复仇;
 ventricle ,/n./@室;,/n./@心室;,/n./@腦室;
-vibration ,/n./@振動;
+vibration ,/n./@振動;,/n./@顫動;,/n./@震動;
 viewpoint ,/n./@观点;
 vigilance ,/n./@警戒;
 vindicate ,/v./@辯護;
