--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -1,4 +1,5 @@
 abbreviate
+aberration
 abominable
 abrogation
 absolutely
@@ -125,6 +126,7 @@ collecting
 collection
 collective
 collegiate
+coloration
 commandeer
 commentary
 commercial
@@ -321,6 +323,7 @@ government
 gramophone
 guillotine
 gymnastics
+gyrational
 handicraft
 helicopter
 hemorrhage
@@ -439,6 +442,7 @@ monopolize
 monotheism
 monotheist
 monotonous
+motherhood
 motivation
 multiplier
 munificent
@@ -464,6 +468,7 @@ optimistic
 ornamental
 orthogonal
 outlandish
+outperform
 paedophile
 pagination
 parametric
@@ -519,6 +524,7 @@ projection
 propaganda
 proportion
 proprietor
+propulsion
 prosecutor
 prosperity
 prosperous
@@ -537,6 +543,7 @@ recuperate
 recurrence
 referendum
 reflection
+reflective
 refraction
 regularity
 regulation
@@ -546,6 +553,7 @@ reluctance
 remarkable
 remorseful
 remunerate
+rendezvous
 repatriate
 repentance
 repetition
@@ -593,6 +601,7 @@ smokestack
 solidarity
 specialist
 specialize
+staggering
 standalone
 standstill
 stationary
@@ -600,6 +609,7 @@ stationery
 statistics
 stepfather
 stepmother
+stigmatize
 stochastic
 subjective
 subliminal
