--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -122,6 +122,7 @@ Deutschland
 development
 dilapidated
 disapproval
+discernible
 discrepancy
 disposition
 dissipation
@@ -129,6 +130,7 @@ distinction
 distinctive
 distinguish
 distraction
+disturbance
 documentary
 duplicitous
 educational
@@ -177,6 +179,7 @@ grasshopper
 handicapped
 haughtiness
 headquarter
+holographic
 hospitality
 humiliation
 humiliatory
@@ -236,6 +239,7 @@ intractable
 investigate
 lacquerware
 linguistics
+luminescent
 magnificent
 maintenance
 manufactory
@@ -313,6 +317,7 @@ protagonist
 provisional
 provocative
 punctuation
+qualitative
 radiculitis
 radioactive
 realization
@@ -334,6 +339,7 @@ respiration
 responsible
 restoration
 restriction
+retaliation
 retribution
 retroactive
 rudimentary
@@ -387,6 +393,7 @@ transaction
 transfusion
 translation
 translucent
+transmedium
 transparent
 transponder
 treacherous
@@ -404,5 +411,6 @@ unnecessary
 unrelenting
 unwittingly
 venturesome
+vibrational
 whereabouts
 willingness
