--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -39,6 +39,7 @@ circumstance
 civilization
 cohabitation
 colonization
+commensurate
 commonwealth
 compensation
 complication
@@ -72,6 +73,7 @@ deliberately
 deliberation
 demographics
 denomination
+destigmatize
 disadvantage
 disagreement
 disconsolate
@@ -152,6 +154,7 @@ occupational
 organisation
 organization
 ostentatious
+outmanoeuvre
 overestimate
 overwhelming
 paramilitary
