--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -262,6 +262,7 @@ coast
 cocky
 colon
 color
+comet
 comfy
 comic
 comma
@@ -391,6 +392,7 @@ embed
 ember
 emend
 empty
+endow
 enemy
 enjoy
 enrol
@@ -742,6 +744,7 @@ moved
 movie
 mulch
 mural
+murky
 music
 musty
 mutex
@@ -938,6 +941,7 @@ robot
 rogue
 Rolex
 Roman
+rotor
 rough
 round
 route
@@ -971,6 +975,7 @@ scope
 score
 scorn
 scour
+scout
 scowl
 scram
 scrap
