--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -75,6 +75,7 @@ arcane
 archer
 ardent
 aren't
+armada
 armour
 around
 arouse
@@ -189,6 +190,7 @@ bridle
 bright
 broach
 broken
+bronze
 brooch
 browse
 bruise
@@ -864,6 +866,7 @@ morbid
 morgue
 morose
 mortal
+mortar
 mosque
 mother
 motion
@@ -892,6 +895,7 @@ nature
 nausea
 nearby
 needle
+negate
 nephew
 nestle
 neural
@@ -913,6 +917,7 @@ nudity
 number
 object
 oblige
+oblong
 obsess
 obtain
 obtuse
@@ -980,6 +985,7 @@ period
 perish
 permit
 person
+pestle
 petrol
 phrase
 phylum
@@ -1057,6 +1063,7 @@ racket
 radial
 radius
 raffle
+rafter
 raisin
 ramble
 random
@@ -1430,6 +1437,7 @@ trauma
 travel
 treaty
 tremor
+trench
 trendy
 treson
 triage
@@ -1472,6 +1480,7 @@ update
 uphold
 uppity
 upward
+Uranus
 urbane
 urgent
 ursine
