--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -114,6 +114,7 @@ baptise
 baptize
 bargain
 barrack
+barrage
 barrier
 bastard
 bathtub
@@ -217,6 +218,7 @@ chapter
 chariot
 charity
 charter
+chassis
 cherish
 chicken
 chimney
@@ -238,6 +240,7 @@ clobber
 closure
 cluster
 clutter
+cockpit
 collage
 collate
 collect
@@ -361,6 +364,7 @@ defense
 defiant
 deficit
 deflate
+deflect
 delight
 deliver
 density
@@ -474,6 +478,7 @@ episode
 epitaph
 erasure
 erosion
+erratic
 espouse
 esquire
 eternal
@@ -550,6 +555,7 @@ forward
 founder
 fragile
 frailty
+frantic
 freedom
 freight
 friable
@@ -654,6 +660,7 @@ incisor
 incline
 include
 indulge
+inertia
 inferno
 inflict
 ingress
@@ -1311,6 +1318,7 @@ unlucky
 unravel
 upfront
 upright
+uranium
 urgency
 urinate
 useless
@@ -1363,6 +1371,7 @@ warlock
 warning
 warrant
 warrior
+warship
 waybill
 weather
 webpage
@@ -1381,6 +1390,7 @@ wiretap
 without
 witness
 woollen
+worldly
 worship
 wrestle
 wringer
