--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -86,6 +86,7 @@ archaism
 arguable
 argument
 armament
+armchair
 aromatic
 arrogant
 arrogate
@@ -237,6 +238,7 @@ contempt
 contents
 continue
 contract
+contrail
 contrary
 contrast
 contrite
@@ -381,6 +383,7 @@ electric
 elegance
 elevator
 eligible
+elongate
 eloquent
 emblazon
 embolden
@@ -516,6 +519,7 @@ gruesome
 guardian
 guidance
 gymnasia
+gyration
 handcuff
 handicap
 handsome
@@ -577,6 +581,7 @@ indebted
 indicate
 indirect
 industry
+inertial
 infamous
 infantry
 inferior
@@ -974,6 +979,7 @@ semester
 sensible
 sensuous
 sentence
+sentient
 separate
 seperate
 septuple
@@ -1018,6 +1024,7 @@ splendor
 sporadic
 sprinkle
 spurious
+squadron
 squander
 stallion
 stampede
@@ -1042,6 +1049,7 @@ stuffing
 stunning
 submerge
 subpoena
+subsonic
 subtitle
 subtlety
 subtract
