--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -235,6 +235,7 @@ cultivate
 curiosity
 currently
 curricula
+curvature
 customary
 customise
 customize
@@ -405,6 +406,7 @@ fabricate
 fanciness
 fantastic
 fascinate
+ferocious
 feudalism
 financial
 firstname
@@ -446,6 +448,7 @@ guarantee
 guideline
 gymnasium
 gymnastic
+gyroscope
 halloween
 hamburger
 handiwork
@@ -500,6 +503,7 @@ increment
 incubator
 inculcate
 incumbent
+incursion
 indelible
 indemnity
 indignant
@@ -511,6 +515,7 @@ informant
 infuriate
 ingenious
 ingenuity
+ingrained
 insertion
 instigate
 institute
@@ -551,6 +556,7 @@ judicious
 katabatic
 kinematic
 knowledge
+laborious
 labyrinth
 landscape
 lawnmower
@@ -580,6 +586,7 @@ margarine
 marijuana
 marvelous
 masculine
+maternity
 matriarch
 matricide
 matrimony
@@ -597,6 +604,7 @@ methodism
 methodist
 metrology
 microwave
+migratory
 millipede
 miniature
 miserable
@@ -705,6 +713,7 @@ porcelain
 portfolio
 posterior
 posterity
+postulate
 potential
 practical
 pragmatic
@@ -840,6 +849,7 @@ severance
 sexuality
 shamanism
 sharpener
+shootdown
 shouldn't
 signature
 similarly
