--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -1,9 +1,10 @@
 abbreviate ,/v./@縮略;
+aberration ,/n./@失常;,/n./@畸變;,/n./@錯位;,/n./@失焦;
 abominable ,/adj./@可惡的;,/adj./@可憎的;,/adj./@討厭的;
 abrogation ,/n./@廢除;,/n./@取消;
 absolutely ,/adv./@完全地;,/adv./@绝对地;
 abstemious ,/adj./@有節制的;
-accelerate ,/v./@加速;,/v./@促进;
+accelerate ,/v./@加速;,/v./@促进;,/v./@增速;
 acceptable ,/adj./@可接受的;
 acceptance ,/n./@接受;
 accessible ,/adj./@可到达的;
@@ -79,7 +80,7 @@ auscultate ,/v./@听诊;,/v./@听诊;
 auspicious ,/adj./@吉祥的;,/adj./@吉兆的;
 autocratic ,/adj./@獨裁的;
 automobile ,/n./@汽车;
-autonomous ,/adj./@自主的;,/adj./@自治的;
+autonomous ,/adj./@自主的;,/adj./@自治的;,/adj./@獨立存在的;
 background ,/n./@背景;,/n./@經歷;
 banishment ,/n./@驱逐;,/n./@放逐;
 basketball ,/n./@篮球;
@@ -117,7 +118,7 @@ chivalrous ,/adj./@俠義的;
 chromosome ,/n./@染色体;
 chronology ,/n./@年表;,/n./@年代顺序;,/n./@年代學;
 circumcise ,/v./@割除包皮;,/v./@割除陰蒂;
-circumvent ,/v./@包圍;,/v./@繞行;
+circumvent ,/v./@包圍;,/v./@繞行;,/vt./@規避;,/vt./@以智取勝;
 clumsiness ,/n./@笨拙;
 collarbone ,/n./@鎖骨;
 collateral ,/adj./@附带的;,/adj./@有担保的;,/n./@抵押的;,/n./@抵押物;
@@ -125,6 +126,7 @@ collecting ,/n./@收集;
 collection ,/n./@收集;
 collective ,/n./@集體;,/adj./@集體的;
 collegiate ,/adj./@大學的;,/adj./@學院的;,/adj./@大學生的;
+coloration ,/n./@色彩;,/n./@著色;,/n./@上色;,/n./@染色;
 commandeer ,/v./@徵用;,/v./@霸占;,/v./@沒收;,/v./@強取;
 commentary ,/n./@实况报导;
 commercial ,/adj./@商業的;,/adj./@商務的;
@@ -321,6 +323,7 @@ government ,/n./@政府;,/n./@政體;,/n./@管轄;
 gramophone ,/n./@留声机;,/n./@唱机;
 guillotine ,/n./@斷頭台;
 gymnastics ,/n./@體操;
+gyrational ,/adj./@旋轉的;,/adj./@迴旋的;,/adj./@螺旋的;
 handicraft ,/n./@手工艺品;
 helicopter ,/n./@直升飞机;
 hemorrhage ,/n./@出血;
@@ -382,7 +385,7 @@ intestines ,/n./@肠子;
 intimidate ,/v./@恐吓;,/v./@威嚇;,/v./@脅迫;
 intonation ,/n./@声调;
 intoxicate ,/vt./@使喝醉;,/vt./@使陶醉;
-intriguing ,/adj./@吸引人的;
+intriguing ,/adj./@吸引人的;,/adj./@引人入勝的;,/adj./@令人好奇的;
 introspect ,/v./@自省;,/v./@反省;
 invalidate ,/v./@失效;,/v./@取消;
 invariable ,/adj./@恒定的;,/n./@恒量;
@@ -439,6 +442,7 @@ monopolize ,/vt./@垄断;
 monotheism ,/n./@一神論;,/n./@一神教;
 monotheist ,/n./@一神论者;
 monotonous ,/adj./@单调的;
+motherhood ,/n./@母亲身份;,/n./@母性;
 motivation ,/n./@动力;
 multiplier ,/n./@乘數;,/n./@倍增器;
 munificent ,/adj./@慷慨的;,/adj./@豐厚的;,/adj./@寬宏的;
@@ -464,6 +468,7 @@ optimistic ,/adj./@乐观的;
 ornamental ,/adj./@裝飾的;
 orthogonal ,/adj./@正交的;,/adj./@直角的;
 outlandish ,/adj./@異國風格的;,/adj./@古怪的;,/adj./@离奇的;,/adj./@偏僻的;
+outperform ,/vt./@勝過;
 paedophile ,/n./@恋童癖者;
 pagination ,/n./@分页;
 parametric ,/n./@參數;
@@ -519,6 +524,7 @@ projection ,/n./@投射;,/n./@投影;
 propaganda ,/n./@宣传;
 proportion ,/n./@部分;,/n./@比例;
 proprietor ,/n./@所有者;,/n./@所有人;,/n./@業主;,/n./@老闆;
+propulsion ,/n./@推進;
 prosecutor ,/n./@檢察官;
 prosperity ,/n./@繁榮;,/n./@興旺;
 prosperous ,/adj./@繁荣的;
@@ -537,6 +543,7 @@ recuperate ,/vt./@恢復;,/vt./@挽回;
 recurrence ,/n./@復發;
 referendum ,/n./@公投;,/n./@全民投票;
 reflection ,/n./@反应;,/n./@反射;
+reflective ,/adj./@反射的;,/adj./@反照的;,/adj./@反映的;,/adj./@思辨的;,/adj./@沉思的;
 refraction ,/n./@折射;
 regularity ,/n./@规则性;,/n./@整齐;
 regulation ,/n./@規則;,/n./@法令;,/n./@管理;
@@ -546,6 +553,7 @@ reluctance ,/n./@不願;,/n./@勉强;
 remarkable ,/adj./@卓越的;,/adj./@非凡的;,/adj./@值得注意的;
 remorseful ,/adj./@懊悔的;,/adj./@悔恨的;
 remunerate ,/vt./@酬勞;
+rendezvous ,/n./@約會;,/n./@會面;,/n./@會合;
 repatriate ,/v./@遣返;
 repentance ,/n./@悔悟;
 repetition ,/n./@重复;
@@ -593,6 +601,7 @@ smokestack ,/n./@煙囪;
 solidarity ,/n./@團結;
 specialist ,/n./@專家;
 specialize ,/v./@专攻;
+staggering ,/adj./@驚人的;,/adj./@巨大的;,/adj./@難以置信的;
 standalone ,/adj./@單獨的;,/adj./@獨立的;,/adj./@脫機的;
 standstill ,/n./@停頓;
 stationary ,/adj./@固定的;,/adj./@不動的;
@@ -600,6 +609,7 @@ stationery ,/n./@文具;,/n./@信紙;
 statistics ,/n./@统计;,/n./@统计学;
 stepfather ,/n./@继父;
 stepmother ,/n./@继母;
+stigmatize ,/vt./@污名化;,/vt./@诬蔑;,/vt./@汙辱;
 stochastic ,/adj./@隨機的;,/adj./@猜測的;
 subjective ,/adj./@主观的;
 subliminal ,/adj./@潛意識的;
