--- a/Files/lang/ch/chinese16.csv
+++ b/Files/lang/ch/chinese16.csv
@@ -1,5 +1,6 @@
 collectivization ,/n./@集體化;
 compartmentalize ,/v./@划分;
+destigmatization ,/n./@去污名化;
 disproportionate ,/adj./@不成比例的;
 entrepreneurship ,/n./@創業精神;
 immunodeficiency ,/n./@免疫缺陷;
