--- a/Files/lang/en/english4.csv
+++ b/Files/lang/en/english4.csv
@@ -6,6 +6,7 @@ acme
 acre
 aeon
 agog
+akin
 alas
 ally
 also
@@ -28,6 +29,7 @@ aura
 auto
 aver
 avid
+avow
 away
 awry
 axis
@@ -827,6 +829,7 @@ rose
 rote
 rout
 rsvp
+ruby
 rude
 ruin
 rule
@@ -895,6 +898,7 @@ slap
 slat
 slay
 sled
+slew
 slim
 slip
 slit
@@ -1075,6 +1079,7 @@ ward
 ware
 warm
 warn
+warp
 wary
 wash
 wave
