--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -324,8 +324,9 @@ gramophone ,/n./@留声机;,/n./@唱机;
 guillotine ,/n./@斷頭台;
 gymnastics ,/n./@體操;
 gyrational ,/adj./@旋轉的;,/adj./@迴旋的;,/adj./@螺旋的;
+gyroscopic ,/adj./@陀螺儀的;,/adj./@迴轉儀的;
 handicraft ,/n./@手工艺品;
-helicopter ,/n./@直升飞机;
+helicopter ,/n./@直升飞机;,/n./@直升機;
 hemorrhage ,/n./@出血;
 hemorrhoid ,/n./@痔瘡;
 henceforth ,/adv./@从此之后;
@@ -534,6 +535,7 @@ providence ,/n./@天意;
 psychopath ,/n./@精神病人;
 pubescence ,/n./@青春期;,/n./@軟毛;
 pugnacious ,/adj./@好战的;,/adj./@好斗的;
+quadcopter ,/n./@四翼飛行器;,/n./@四軸飛行器;
 radicalism ,/n./@激进主义;
 radiosonde ,/n./@無線電高空測候器;,/n./@無線電探空儀;
 reasonable ,/adj./@合理的;
@@ -595,6 +597,7 @@ settlement ,/n./@解决;,/n./@定居地;
 shopkeeper ,/n./@店主;
 similarity ,/n./@類似;
 simplicity ,/n./@簡單;,/n./@簡樸;,/n./@單純;
+skepticism ,/n./@懷疑論;,/n./@懷疑態度;
 smartphone ,/n./@智能手机;
 smithereen ,/v./@击碎;
 smokestack ,/n./@煙囪;
