--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -249,6 +249,8 @@ masterpiece ,/n./@杰作;
 mathematics ,/n./@数学;
 meaningless ,/adj./@无意义的;
 measurement ,/n./@测量;,/n./@度量;
+megalomania ,/n./@妄自尊大;,/n./@誇大狂;
+memorabilia ,/n./@值得紀念的事物;,/n./@紀念品;
 merchandise ,/n./@商品;,/n./@貨物;,/vt./@買賣;,/vt./@經銷;
 metaphysics ,/n./@形而上学;
 methodology ,/n./@方法論;
