--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -194,7 +194,7 @@ rememberance ,/n./@回忆;,/n./@记忆力;
 reminiscence ,/n./@懷念;,/n./@回憶;
 repercussion ,/n./@間接後果;,/n./@反響;
 reprehension ,/n./@指責;,/n./@非難;
-reproduction ,/n./@繁殖;
+reproduction ,/n./@繁殖;,/n./@複製;
 resurrection ,/n./@復活;,/n./@恢復;,/n./@復興;
 satisfaction ,/n./@满足;
 significance ,/n./@重要性;,/n./@意义;
