--- a/Files/lang/ch/chinese16.csv
+++ b/Files/lang/ch/chinese16.csv
@@ -3,5 +3,6 @@ compartmentalize ,/v./@划分;
 destigmatization ,/n./@去污名化;
 disproportionate ,/adj./@不成比例的;
 entrepreneurship ,/n./@創業精神;
+extraterrestrial ,/adj./@地球外的;,/adj./@地球大氣層外的;
 immunodeficiency ,/n./@免疫缺陷;
 unconventionally ,/adj./@不按惯例地;
