--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -1061,6 +1061,7 @@ veto ,/n./@否決;
 vibe ,/n./@氛围;,/n./@感觉;
 vice ,/n./@惡習;,/n./@缺點;,/adj./@副的;
 view ,/n./@視野;,/n./@觀點;,/n./@見解;,/n./@景色;,/v./@查看;
+vile ,/adj./@邪惡的;,/adj./@卑鄙的;
 vine ,/n./@藤;,/n./@葡萄樹;
 visa ,/n./@簽證;
 vivo ,/adj./@活潑的;
