--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -155,6 +155,7 @@ booth ,/n./@貨攤;,/n./@電話亭;
 booze ,/n./@酒宴;,/v./@豪飲;,/n./@酒;
 bored ,/adj./@無聊的;
 bosom ,/n./@胸;
+bough ,/n./@大樹枝;,/n./@粗樹枝;
 bound ,/vt./@束縛;,/n./@跳躍;,/n./@界限;
 bowel ,/n./@腸;,/n./@內部;,/n./@深處;
 brace ,/n./@大括號;,/n./@支架;,/n./@牙箍;,/n./@梏具;,/vi./@俯身抱头;,/vt./@加固;,/vt./@顶住;
@@ -177,6 +178,7 @@ broad ,/adj./@寬的;,/adj./@寬闊的;,/adj./@廣闊的;,/adj./@遼闊的;
 broke ,/adj./@被破壞的;
 brood ,/n./@窩;,/v./@孵;,/v./@沉思;
 broom ,/n./@掃帚;
+broth ,/n./@燉湯;,/n./@高湯;,/n./@湯;
 brown ,/adj./@棕色的;
 brunt ,/n./@衝擊;,/n./@撞擊;
 brush ,/n./@刷;
@@ -734,7 +736,7 @@ moral ,/adj./@道德的;,/n./@教訓;
 moron ,/n./@傻子;
 morph ,/n.v./@詞態;,/v./@改變;
 motel ,/n./@汽車旅館;
-motto ,/n./@座右銘;
+motto ,/n./@座右銘;,/n./@格言;
 mould ,/n./@霉菌;,/n./@模具;,/n./@型;,/v./@發霉;,/v./@澆鑄;
 mound ,/n./@堆;,/v./@堆起;
 mourn ,/v./@哀嚎;
@@ -1085,6 +1087,7 @@ spasm ,/n./@痙攣;
 spawn ,/n./@卵;,/v./@產卵;
 speak ,/v./@說;,/v./@講;
 spear ,/n./@矛;,/n./@槍;,/vt./@用矛刺;
+speck ,/n./@斑點;,/n./@汙點;,/n./@瑕疵;,/n./@鏽斑;
 spect ,/v./@看;
 speed ,/n./@速度;
 spend ,/v./@消耗;,/v./@花費;
