--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1066,6 +1066,7 @@ raffle ,/v./@抽彩售貨;
 rafter ,/n./@椽;,/n./@椽子;
 raisin ,/n./@葡萄乾;
 ramble ,/v./@漫步;,/n./@漫步;
+ramjet ,/n./@沖壓式噴氣引擎;,/n./@沖壓式噴氣發動機;,/n./@噴射推進引擎;
 random ,/adj./@隨機的;,/adj./@任意的;
 ranger ,/n./@巡邏員;
 rappel ,/v./@援繩下降;,/v./@援繩而下;
@@ -1183,7 +1184,7 @@ sample ,/n./@樣品;
 sandal ,/n./@凉鞋;
 satire ,/n./@諷刺;,/n./@譏諷;
 saturn ,/n./@農神;,/n./@土星;
-saucer ,/n./@茶碟;
+saucer ,/n./@茶碟;,/n./@茶托;,/n./@淺碟;
 savage ,/adj./@野蛮的;,/adj./@残酷的;,/adj./@狂怒的;,/adj./@荒凉的;,/vt./@激烈抨擊;
 scarce ,/adj./@缺乏的;
 scathe ,/v./@損傷;,/v./@損害;,/n./@損傷;,/n./@損害;
