--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -31,6 +31,7 @@ agitate ,/v./@煽動;
 agonize ,/v./@痛苦;
 ailment ,/n./@疾病;,/n./@小病;
 aimless ,/adj./@无目的的;
+airfoil ,/n./@機翼;,/n./@螺旋槳;
 airport ,/n./@飛機場;
 airship ,/n./@氣艇;
 alchemy ,/n./@點金術;
@@ -364,7 +365,7 @@ defense ,/n./@答辯;
 defiant ,/adj./@挑釁的;
 deficit ,/n./@赤字;
 deflate ,/v./@收縮;,/v./@緊縮;
-deflect ,/vt./使@偏斜;,/vt./使@轉向;
+deflect ,/vt./使@偏斜;,/vt./使@轉向;,/vi./@偏斜;,/vi./@轉向;
 delight ,/adj./@髙興的;,/adj./@愉快的;
 deliver ,/v./@交付;,/v./@傳送;,/v./@遞送;,/v./@接生;
 density ,/n./@密度;
@@ -726,6 +727,7 @@ leopard ,/n./@豹子;
 leprosy ,/n./@麻风病;
 lettuce ,/n./@生菜;,/n./@萵苣;
 lexical ,/adj./@詞彙的;
+liaison ,/n./@聯絡;,/n./@私通;
 liberal ,/adj./@自由主義的;
 liberty ,/n./@自由;
 library ,/n./@圖書館;,/n./@資料庫;
@@ -1266,6 +1268,7 @@ thither ,/adj./@那里;
 thought ,/v./@想@<think的過去式>;
 thrifty ,/adj./@節儉的;,/adj./@茂盛的;
 through ,/v./@通過;,/adv./@徹底;,/adj./@直達的;
+thulium ,/n./@銩;
 thunder ,/n./@雷;
 thyroid ,/n./@甲狀腺;,/n./@甲狀軟骨;,/adj./@甲狀腺的;,/adj./@甲狀軟骨的;
 tobacco ,/n./@煙草;
