--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -105,7 +105,7 @@ attitude ,/n./@态度;,/n./@看法;
 attorney ,/n./@律师;,/n./@代理人;
 audience ,/n./@听众;
 audition ,/n./@試音;,/v.//n./@試聽;,/n./@聽力;,/n./@聽覺;,/v.//n./@試唱;,/v./@面試;,/n./@试演;,/vi./@试演;
-autonomy ,/n./@自治;
+autonomy ,/n./@自治;,/n./@自主;
 auxilian ,/n./@辅助人员;
 aversion ,/n./@非常討厭;
 aviation ,/n./@航空;
@@ -405,7 +405,7 @@ entirely ,/adv./@完全地;
 entirety ,/n./@全部;,/n./@總體;,/n./@全體;,/n./@完整;
 entrance ,/n./@入口;
 entrench ,/v./@確立;,/v./@牢固;,/v./@挖掘;,/v./@用壕溝圍住;
-envelope ,/n./@信封;
+envelope ,/n./@信封;,/n./@外殼;,/n./@氣囊;
 enviable ,/adj./@值得羡慕的;
 envision ,/vt./@想象;
 epidemic ,/adj./@流行的;,/adj./@傳染性的;,/n./@傳染病;,/n./@流行病;
@@ -841,6 +841,7 @@ poignant ,/adj./@酸楚的;,/adj./@辛酸的;,/adj./@悲惨的;
 polarity ,/n./@極性;
 polaroid ,/n./@偏光板;,/n./@偏振片;
 politics ,/n./@政治;
+polymath ,/adj./@博學的;,/n./@博學家;
 populace ,/n./@民众;,/n./@大众;
 portable ,/adj./@可携带的;
 position ,/n./@位置;,/n./@姿态;
@@ -1120,6 +1121,7 @@ triangle ,/n./@三角形;,/n./@三角;
 tribunal ,/n./@法庭;,/n./@仲裁机构;,/n./@公斷;,/n./@法官席;
 trillion ,/n./@万亿;
 truncate ,/v./@截斷;,/v./@縮短;,/adj./@截斷的;
+turbojet ,/n./@渦輪噴氣發動機;,/n./@渦輪噴氣飛機;,/n./@渦輪噴射引擎;,/n./@渦輪噴射飛機;
 tutorial ,/adj./@輔導的;,/adj./@指導的;
 twilight ,/n./@黎明;,/n./@黃昏;,/n./@微亮;
 ubiquity ,/n./@无处不在;,/n./@普遍存在;
@@ -1158,6 +1160,7 @@ visceral ,/adj./@內臟的;
 visional ,/adj./@虚幻的;,/adj./@视力的;
 vocation ,/n./@职业;
 volatile ,/n./@不稳定的;,/adj./@揮發性的;,/adj./@爆炸性的;,/adj./@反復無常的;
+vortices ,/n.//pl./@旋渦;,/n.//pl./@渦流;
 waitress ,/n./@女侍者;
 wardrobe ,/n./@衣柜;
 wasteful ,/adj./@挥霍的;
