--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -98,9 +98,11 @@ authority ,/n./@权威;
 autocracy ,/n./@獨裁;
 autograph ,/v./@親筆;
 automatic ,/adj./@自动的;
+autonomic ,/adj./@自治的;,/adj./@自發的;
 auxiliary ,/adj./@辅助的;,/n./@辅助者;,/n./@助动词;
 available ,/adj./@可用的;
 avalanche ,/n./@雪崩;,/n./@山崩;,/n./@大批;
+awestruck ,/adj./@充滿敬畏的;
 backslash ,/n./@反斜杠;
 balaclava ,/n./@巴拉克拉瓦盔式帽;
 ballistic ,/adj./@彈道的;
@@ -296,6 +298,7 @@ directive ,/n./@命令;,/n./@指令;
 directory ,/n./@目錄;,/n./@地址錄;
 disappear ,/v./@消失;
 discharge ,/v./@解除;,/v./@釋放;
+discopter ,/n./@飛碟;
 discovery ,/n./@发现;
 disengage ,/v./@解除;,/v./@脫離;
 dishonest ,/adj./@不诚实的;
@@ -328,7 +331,7 @@ education ,/n./@教育;
 effective ,/adj./@有效的;
 efficient ,/adj./@效率高的;
 ejaculate ,/v./@射精;
-elaborate ,/v./@闡述;,/adj./@詳盡的;,/adj./@精心制作的;
+elaborate ,/v./@闡述;,/adj./@詳盡的;,/adj./@精心制作的;,/adj./@精密的;,/adj./@精细的;,/adj./@複雜的;
 elemental ,/adj./@自然力的;,/adj./@基本的;,/adj./@原始的;,/adj./@強大的;,/adj./@元素的;
 elevation ,/n./@海拔;,/n./@提高;,/n./@崇高;
 eliminate ,/v./@消除;,/v./@排除;
@@ -576,6 +579,7 @@ lucrative ,/adj./@賺錢的;,/adj./@有利可圖的;
 luxurious ,/adj./@豪華的;,/adj./@奢侈的;,/adj./@非常舒適的;
 machinery ,/n./@机械;
 magnesium ,/n./@鎂;
+magnetize ,/vt./@磁化;,/vt./@吸引;
 magnitude ,/n./@宏大;,/n./@重要;,/n./@量級;,/n./@大小;,/n./@震級;
 makeshift ,/adj./@临时替代的;,/adj./@臨時代用的;,/adj./@臨時用的;,/adj./@權宜的;
 malicious ,/adj./@惡意的;
@@ -704,7 +708,7 @@ plausible ,/adj./@似有道理的;
 plentiful ,/adj./@丰富的;,/adj./@充足的;
 plication ,/n./@褶皺;,/n./@皺紋;
 pluralism ,/n./@多元化;
-pneumatic ,/adj./@氣體的;,/adj./@空氣的;
+pneumatic ,/adj./@氣體的;,/adj./@空氣的;,/adj./@充氣的;,/adj./@壓縮空氣推動的;,/adj./@氣動的;
 poisonous ,/adj./@有毒的;
 political ,/adj./@政治的;
 pollution ,/n./@污染;
@@ -906,6 +910,7 @@ synthetic ,/adj./@合成的;,/adj./@人造的;,/adj./@綜合的;
 tangerine ,/n./@橘子;
 tantalize ,/vt./@逗惹;,/vt./@折磨;,/vt./@撩撥;
 technique ,/n./@技术;
+telepathy ,/n./@心靈感應;,/n./@傳心術;
 telephone ,/n./@电话;
 telescope ,/n./@望远镜;
 temporary ,/adj./@临时的;
@@ -929,6 +934,7 @@ transform ,/v./@转换;,/v./@改观;
 transient ,/adj./@短暫的;,/adj./@暂住的;
 translate ,/v./@翻譯;
 transmute ,/v./@变化;
+transonic ,/adj./@接近音速的;
 transpond ,/v./@轉發;
 transport ,/v./@运输;
 treadmill ,/n./@踏車;,/n./@跑步機;,/n./@單調的工作;
