--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -324,6 +324,7 @@ gramophone
 guillotine
 gymnastics
 gyrational
+gyroscopic
 handicraft
 helicopter
 hemorrhage
@@ -534,6 +535,7 @@ providence
 psychopath
 pubescence
 pugnacious
+quadcopter
 radicalism
 radiosonde
 reasonable
@@ -595,6 +597,7 @@ settlement
 shopkeeper
 similarity
 simplicity
+skepticism
 smartphone
 smithereen
 smokestack
