--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -155,6 +155,7 @@ booth
 booze
 bored
 bosom
+bough
 bound
 bowel
 brace
@@ -177,6 +178,7 @@ broad
 broke
 brood
 broom
+broth
 brown
 brunt
 brush
@@ -1085,6 +1087,7 @@ spasm
 spawn
 speak
 spear
+speck
 spect
 speed
 spend
