--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -31,6 +31,7 @@ agitate
 agonize
 ailment
 aimless
+airfoil
 airport
 airship
 alchemy
@@ -726,6 +727,7 @@ leopard
 leprosy
 lettuce
 lexical
+liaison
 liberal
 liberty
 library
@@ -1266,6 +1268,7 @@ thither
 thought
 thrifty
 through
+thulium
 thunder
 thyroid
 tobacco
