--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -841,6 +841,7 @@ poignant
 polarity
 polaroid
 politics
+polymath
 populace
 portable
 position
@@ -1120,6 +1121,7 @@ triangle
 tribunal
 trillion
 truncate
+turbojet
 tutorial
 twilight
 ubiquity
@@ -1158,6 +1160,7 @@ visceral
 visional
 vocation
 volatile
+vortices
 waitress
 wardrobe
 wasteful
