--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -98,9 +98,11 @@ authority
 autocracy
 autograph
 automatic
+autonomic
 auxiliary
 available
 avalanche
+awestruck
 backslash
 balaclava
 ballistic
@@ -296,6 +298,7 @@ directive
 directory
 disappear
 discharge
+discopter
 discovery
 disengage
 dishonest
@@ -576,6 +579,7 @@ lucrative
 luxurious
 machinery
 magnesium
+magnetize
 magnitude
 makeshift
 malicious
@@ -906,6 +910,7 @@ synthetic
 tangerine
 tantalize
 technique
+telepathy
 telephone
 telescope
 temporary
@@ -929,6 +934,7 @@ transform
 transient
 translate
 transmute
+transonic
 transpond
 transport
 treadmill
